// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`match played to a decision > reaches a winner and matches the recorded outcome 1`] = `
{
  "matchWinner": 1,
  "p1": {
    "hp": 0,
    "state": "KO",
    "x": 548.5776,
  },
  "p2": {
    "hp": 82.9903,
    "state": "VICTORY",
    "x": 668.4809,
  },
  "phase": "ending",
  "round": 2,
  "roundWins": [
    0,
    2,
  ],
  "tick": 1577,
}
`;

exports[`one-player match against the CPU > replays identically, including every CPU decision 1`] = `
[
  "t150:e601b978",
  "t300:fd387163",
  "t450:9468866b",
  "t600:25f35745",
  "t750:35902c21",
  "t900:f29418f1",
]
`;

exports[`one-player match against the CPU > replays identically, including every CPU decision 2`] = `
{
  "matchWinner": null,
  "p1": {
    "hp": 100,
    "state": "IDLE",
    "x": 350,
  },
  "p2": {
    "hp": 100,
    "state": "IDLE",
    "x": 930,
  },
  "phase": "intro",
  "round": 2,
  "roundWins": [
    0,
    1,
  ],
  "tick": 900,
}
`;

exports[`projectile and zone characters > matches the recorded checksum trail 1`] = `
[
  "t120:5f74d251",
  "t240:fd9e5e23",
  "t360:e8ffb325",
  "t480:92ba6df7",
  "t600:4e7201fb",
  "t720:a9a265d7",
  "t840:6ceac325",
]
`;

exports[`two-player scripted match > matches the recorded checksum trail 1`] = `
[
  "t120:e30ac7",
  "t240:ab0966ba",
  "t360:eb514e57",
  "t480:cac248e4",
  "t600:9ba823aa",
  "t720:4316206f",
  "t840:1e43231c",
  "t960:50cbb078",
  "t1080:ea7194f1",
  "t1200:1cff7464",
]
`;

exports[`two-player scripted match > matches the recorded final state 1`] = `
{
  "matchWinner": null,
  "p1": {
    "hp": 27.5914,
    "state": "DASH_BACK",
    "x": 1185,
  },
  "p2": {
    "hp": 6.4468,
    "state": "HEAVY_ATTACK",
    "x": 820.3482,
  },
  "phase": "fight",
  "round": 1,
  "roundWins": [
    0,
    0,
  ],
  "tick": 1200,
}
`;

exports[`ultimate timelines > replays alien against salad identically 1`] = `
[
  "t150:398b37a7",
  "t300:d410aba5",
  "t450:954bb5ce",
  "t600:fbac22b5",
  "t750:451afc8c",
  "t900:19442e2",
]
`;

exports[`ultimate timelines > replays alien against salad identically 2`] = `
{
  "matchWinner": null,
  "p1": {
    "hp": 100,
    "state": "IDLE",
    "x": 141.6667,
  },
  "p2": {
    "hp": 30.3884,
    "state": "DASH_FORWARD",
    "x": 362.9946,
  },
  "phase": "fight",
  "round": 1,
  "roundWins": [
    0,
    0,
  ],
  "tick": 900,
}
`;

exports[`ultimate timelines > replays doge against sauce identically 1`] = `
[
  "t150:c74c2b19",
  "t300:b97de7da",
  "t450:3a00d900",
  "t600:e1438c6e",
  "t750:12973708",
  "t900:53e12432",
]
`;

exports[`ultimate timelines > replays doge against sauce identically 2`] = `
{
  "matchWinner": null,
  "p1": {
    "hp": 100,
    "state": "ULTIMATE",
    "x": 170.7679,
  },
  "p2": {
    "hp": 60.1336,
    "state": "HITSTUN",
    "x": 269.6164,
  },
  "phase": "fight",
  "round": 1,
  "roundWins": [
    0,
    0,
  ],
  "tick": 900,
}
`;

exports[`ultimate timelines > replays ok against wizard identically 1`] = `
[
  "t150:6e8f5426",
  "t300:540b2dc8",
  "t450:70286611",
  "t600:bae0e96d",
  "t750:7ba7bb61",
  "t900:187e8dc0",
]
`;

exports[`ultimate timelines > replays ok against wizard identically 2`] = `
{
  "matchWinner": null,
  "p1": {
    "hp": 100,
    "state": "ULTIMATE",
    "x": 97.3333,
  },
  "p2": {
    "hp": 50.2467,
    "state": "HITSTUN",
    "x": 183.3333,
  },
  "phase": "fight",
  "round": 1,
  "roundWins": [
    0,
    0,
  ],
  "tick": 900,
}
`;
